--- a/css/login.css
+++ b/css/login.css
@@ -7,74 +7,132 @@ body,html{
 .login{
     width: 100%;
     height: 100%;
-    background: url('../images/login.png') no-repeat;
-    background-size: 100% 100%;
-    padding: 16% 0;
-    box-sizing: border-box;
+   
+   
+}
+.login .title{
+    width:100%;
+    height:67.5px;
+    /* line-height: 45px; */
+    background:rgba(255,255,255,1);
+    /* position: absolute;
+    top: 0; */
+}
+.login .title img{
+    width: auto;
+    height:67.5px;
+    margin-left: 15%;
+}
+.login .title .rightPart{
+    display: inline-block;
+    height: 100%;
+    margin-right: 10%;
+    float: right;
+}
+.login .title .rightPart p{
+    height: 33.7px;
+    line-height: 33.7px;
+    font-size: 13px;
+    text-align: right;
+}
+.login .title .rightPart p:first-child{
+    color: #333;
+}
+.login .title .rightPart p:last-child{
+    color: #2F87F5;
 }
 .login .main{
-    width:35%;
-    height:100%;
+    width: 100%;
+    height: calc(100% - 67.5px);
+    background: url('../images/loginBg.png') no-repeat;
+    background-size: 100% 100%;
+    position: relative;
+    /* padding: 16% 0; */
+    /* box-sizing: border-box; */
+}
+.login .main .main_main{
+    width: 350px;
+    height: 330px;
     margin: 0 auto;
     background:rgba(255,255,255,1);
     box-shadow:0px 4px 12px 0px rgba(23,55,67,0.24);
-    border-radius:15px;
+    border-radius:10px;
     text-align: center;
-    padding: 2% 5%;
+    padding: 2% 4%;
     box-sizing: border-box;
+    position: absolute;
+    top: 30%;
+    right: 10%;
 }
-.login .main .header{
+.login .main .main_main p{
+    text-align: left;
+    height:21px;
+    font-size:14px;
+    font-family:MicrosoftYaHei;
+    font-weight:400;
+    color:rgba(0,0,0,1);
+}
+.login .main .main_main .header{
     width: 85%;
 }
-.login .main .line1{
+.login .main .main_main .line1{
     width:100%;
     height:1px;
-    background:rgba(204,204,209,1);
-    margin: 20px 0;
+    background: #028BFF;
+    margin: 5px 0 25px 0;
 }
-.login .main .input_div{
+.login .main .main_main .input_div{
     width: 90%;
-    height: 35px;
+    height: 37.5px;
     line-height: 34px;
-    border:1px solid rgba(200, 202, 206, 1);
-    border-radius:20px;
+    /* border:1px solid rgba(200, 202, 206, 1); */
+    background: rgba(247,247,247,1);
+    border-radius:2px;
     margin-bottom: 20px;
     padding: 0 5%;
     text-align: left;
 }
-.login .main .input_div img{
-    width: 22px;
+.login .main .main_main .input_div img{
+    width: 15px;
 }
-.login .main .input_div:hover,.input_div:active{
+.login .main .main_main .input_div:hover,.input_div:active{
     color: rgba(60,145,241,1);
     border:1px solid rgba(60,145,241,1);
 }
-.login .main .input_div input{
-    width: 86%;
-    height: 30px;
-    font-size:18px;
-    font-family:SourceHanSansCN;
+.login .main .main_main .input_div input{
+    width: 85%;
+    height: 100%;
+    font-size:10px;
+    font-family:MicrosoftYaHei;
     font-weight:400;
-    color:rgba(216,214,214,1);
+    background: rgba(247,247,247,1);
+    color:rgba(181,181,181,1);
+    line-height:2px;
     margin-left: 10px;
     text-indent: 10px;
     border: none;
-    border-left:1px solid rgba(216,214,214,1) ;
+    /* border-left:1px solid rgba(216,214,214,1) ; */
 }
-.login .main button{
+.login .main .main_main button{
     margin: 10px 0 20px;
-    font-size:18px;
-    font-family:SourceHanSansCN;
+    height:35px;
+    line-height: 35px;
+    font-size:13px;
+    font-family:MicrosoftYaHei;
     font-weight:400;
-    color:rgba(245,239,255,1);
-    background:rgba(0,159,229,1);
+    color:rgba(255,255,255,1);
+    line-height:3px;
+    border: none;
+    background:linear-gradient(-90deg,rgba(50,183,240,1) 0%,rgba(20,94,202,1) 100%);
+    box-shadow:0px 4px 9px 0px rgba(0,138,255,0.41);
+    border-radius:13px;
 }
 .layui-row{
-    font-size:16px;
     font-family:MicrosoftYaHei;
     font-weight:400;
 }
 .layui-row a{
+    font-size:12px;
     color:rgba(153,153,153,1);
     text-decoration: none;
 }
@@ -83,8 +141,12 @@ body,html{
     text-align: center;
     position: fixed;
     bottom: 10px;
-    font-size:16px;
+    font-size:10px;
     font-family:MicrosoftYaHei;
     font-weight:400;
-    color:rgba(23,26,30,1);
+    color:rgba(255,255,255,1);
+}
+.login .footer img{
+    width: 25.5px;
+    height: auto;
 }
