--- a/css/login.css
+++ b/css/login.css
@@ -319,6 +319,9 @@ body,html{
 a{
     cursor: pointer;
 }
+.layui-form-select dl dd.layui-this{
+    background-color: #2F87F5;
+}
 @media screen and (min-height: 900px){
     .login .main #main_main3{
         height:78%;
